--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="css/responsive.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="images/nina-logo.png">
+  <link rel="shortcut icon" href="images/nina-logo.PNG">
 </head>
 
 <body>
@@ -319,7 +319,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-1.jpg" class="img-responsive" alt="img"></a>
+              <a href="blog-single.html"><img src="images/blog-post-1.JPG" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
@@ -335,7 +335,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-2.jpg" class="img-responsive" alt="img"></a>
+              <a href="blog-single.html"><img src="images/blog-post-2.JPG" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
@@ -354,7 +354,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-3.jpg" class="img-responsive" alt="img"></a>
+              <a href="blog-single.html"><img src="images/blog-post-3.JPG" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
