--- a/blog-single.html
+++ b/blog-single.html
@@ -70,7 +70,7 @@
             <div class="container-main single-main">
               <div class="col-md-12">
                 <div class="block-main mb-30">
-                  <img src="images/blog-post-big.JPG" class="img-responsive" alt="reviews2">
+                  <img src="images/blog-post-big.jpg" class="img-responsive" alt="reviews2">
                   <div class="content-main single-post padDiv">
                     <div class="journal-txt">
                       <h4><a href="#">MY MOTIVATION</a></h4>
