--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <!-- end section services -->
 
   <!--Education-->
-  <div id="edu"  class="paddsection">
+  <div id="edu"  class="edu paddsection">
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6 col-md-6 col-lg-6">
