change content in blog

--- a/blog-single.html
+++ b/blog-single.html
@@ -88,12 +88,13 @@
                     <p class="mb-30">The first step I took in overcoming the challenge of assimilation was by improving my English. I spent the first year in ESL then I attended Orange Coast College as a Computer Science major. I took the placement test for Math and English.
                        The result for Math was good, I was in Calculus 1, however, as for English, I was placed in beginning classes. I believed I could do better and took the time to study for retake of the test. I remained persistent in personal study of the English language and retook the exam. 
                        The studying paid off as I was placed in English 99 - a much higher English class that was in conjunction with classes towards my major. Besides this academic challenge, I also had to find a part-time job to cover my expenses. 
-                       I solved this problem by getting a part-time job at my school to earn more experiences about life in the US along with improving my English.
+                       I solved this problem by getting a part-time job to earn more experiences about life in the US along with improving my English.
                     </p>
                     <blockquote>If you are still looking for that one person who will change your life, take a look in the mirror.</blockquote>
                     <p class="mb-30">Overcoming this challenge had a significant impact on my academic achievement because it led me closer to my goals. I feel more confident when I can communicate with other people without any interruption and I am able to be independent in my life. 
                       After I graduated from my college, I transfered to University of California-Irvine to continue pursue for my bachelor degree. In last summer, I'm so lucky that I have a chance to work at Apple as a specialist. I feel really greateful to all people at Apple for all their help.
-                      I can balance between being a full-time student and part-time working at Apple . Living here gives me valuable experiences that prepare me for life and the difficulties that come with it. 
+                      Thanks for all the lessons from people I've met. I will continue try all my best to balance between being a full-time student and working at Apple. In this summer, when I graduate from UCI, I have another chance for internship in Optimizely as a SDET role. That's another opportunity and challenge for me. 
+                      Living here gives me valuable experiences that prepare me for life and the difficulties that come with it. 
                       Instead of feeling paralyzed and stuck when I think about my future, I feel motivated to take action. Facing any future challenges, I remember what I learned.  Overcoming my fear has made me a stronger, more resourceful person.  
                     </p>
                   </div>
