--- a/blog-single.html
+++ b/blog-single.html
@@ -92,7 +92,7 @@
                     </p>
                     <blockquote>If you are still looking for that one person who will change your life, take a look in the mirror.</blockquote>
                     <p class="mb-30">Overcoming this challenge had a significant impact on my academic achievement because it led me closer to my goals. I feel more confident when I can communicate with other people without any interruption and I am able to be independent in my life. 
-                      After I graduated from my college, I transfered to University of California-Irvine to continue pursue for my bachelor degree. In last summer, I'm so lucky that I have a chance to work at Apple as a specialist. I feel really greateful to all people at Apple for all their help.
+                      After I graduated from my college, I transfered to University of California-Irvine to continue pursue for my bachelor degree. In last summer, I'm so lucky that I had a chance to work at Apple as a specialist. I feel really greateful to all people at Apple for all their help.
                       Thanks for all the lessons from people I've met. I will continue try all my best to balance between being a full-time student and working at Apple. In this summer, when I graduate from UCI, I have another chance for internship in Optimizely as a SDET role. That's another opportunity and challenge for me. 
                       Living here gives me valuable experiences that prepare me for life and the difficulties that come with it. 
                       Instead of feeling paralyzed and stuck when I think about my future, I feel motivated to take action. Facing any future challenges, I remember what I learned.  Overcoming my fear has made me a stronger, more resourceful person.  
