change porfolio pics

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
   <!-- End section journal -->
 
 
-  <!-- start sectoion contact -->
+  <!-- start section contact -->
   <div id="contact" class="paddsection">
     <div class="container">
       <div class="contact-block1">
