--- a/index.html
+++ b/index.html
@@ -258,37 +258,37 @@
 
           <div class="portfolio-container">
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all">
               <a class="popup-img" href="images/portfolio/1.jpg">
                 <img src="images/portfolio/1.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign">
               <a class="popup-img" href="images/portfolio/2.jpg">
                 <img src="images/portfolio/2.jpg"  alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all  webdesig mockups">
               <a class="popup-img" href="images/portfolio/3.jpg">
                 <img src="images/portfolio/3.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups webdesign photography">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign">
               <a class="popup-img" href="images/portfolio/4.jpg">
                 <img src="images/portfolio/4.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign">
               <a class="popup-img" href="images/portfolio/5.jpg">
                 <img src="images/portfolio/5.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all">
               <a class="popup-img" href="images/portfolio/6.jpg">
                 <img src="images/portfolio/6.jpg" alt="img">
               </a>
