--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
           <div class="portfolio-container">
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups">
               <a class="popup-img" href="images/portfolio/1.jpg">
                 <img src="images/portfolio/1.jpg" alt="img">
               </a>
