--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all  webdesig mockups">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign mockups">
               <a class="popup-img" href="images/portfolio/3.jpg">
                 <img src="images/portfolio/3.jpg" alt="img">
               </a>
