--- a/index.html
+++ b/index.html
@@ -258,19 +258,19 @@
 
           <div class="portfolio-container">
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all">
               <a class="popup-img" href="images/portfolio/1.jpg">
                 <img src="images/portfolio/1.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups">
               <a class="popup-img" href="images/portfolio/2.jpg">
                 <img src="images/portfolio/2.jpg"  alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all webdesign mockups">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups">
               <a class="popup-img" href="images/portfolio/3.jpg">
                 <img src="images/portfolio/3.jpg" alt="img">
               </a>
