--- a/index.html
+++ b/index.html
@@ -324,8 +324,7 @@
               <div class="journal-txt">
 
                 <h4><a href="blog-single.html">STAY PATIENT AND TRUST YOUR JOURNEY</a></h4>
-                <p class="separator">"Nothing is impossible. The world itself says "I'm Possible""
-                </p>
+                <p class="separator">"Nothing is impossible. The world itself says "I'm Possible""</p>
 
               </div>
 
