update get in touch

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <li><a href="https://www.facebook.com/vuongtrucnha"><i class="ion-social-facebook"></i></a></li>  
           <li><a href="https://www.instagram.com/nhavuong/"><i class="ion-social-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/in/nina-vuong-a76435186/"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://github.com/nhavuong"><i class="ion-social-github"></i></a></li>
         </ul>
       </div>
     </div>
@@ -386,10 +387,10 @@
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
-                <li><span>2514 South Center Street</span></li>
-                <li><span>Santa Ana, CA 92704, United States</span></li>
-                <li><span>(714) 902-5986</span></li>
-                <li><span>ninavuong27@gmail.com</span></li>
+                <li><span><i class="fas fa-map-marked-alt"></i> 2514 S Center Street, Santa Ana, CA 92704</span></li>
+                <!-- <li><span>Santa Ana, CA 92704, United States</span></li> -->
+                <li><span><i class="fas fa-phone"></i> (714) 902-5986</span></li>
+                <li><a class="email" href = "mailto: ninavuong27@gmail.com"><i class="fas fa-envelope"></i> ninavuong27@gmail.com</a></li>
               </ul>
 
             </div>
@@ -453,8 +454,8 @@
           <li><a href="https://www.facebook.com/vuongtrucnha"><i class="ion-social-facebook"></i></a></li>  
           <li><a href="https://www.instagram.com/nhavuong/"><i class="ion-social-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/in/nina-vuong-a76435186/"><i class="ion-social-linkedin"></i></a></li>
-          <!-- <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+          <li><a href="https://github.com/nhavuong"><i class="ion-social-github"></i></a></li>
+          <!-- <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
           <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
           <li><a href="#"><i class="ion-social-dribbble"></i></a></li> -->
         </ul>
@@ -477,6 +478,7 @@
 
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
+  <script src="https://kit.fontawesome.com/3a7f96f49f.js" crossorigin="anonymous"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
