--- a/blog-single.html
+++ b/blog-single.html
@@ -32,7 +32,7 @@
   <link href="css/responsive.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="shortcut icon" href="images/nina-logo.PNG">
 
  
 </head>
@@ -51,10 +51,10 @@
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
         <ul class="nav-menu list-unstyled">
-          <li><a href="#home" class="smoothScroll">Home</a></li>
-          <li><a href="#about" class="smoothScroll">About</a></li>
-          <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-          <li><a href="#blog" class="smoothScroll">Blog</a></li>
+          <li><a href="index.html" class="smoothScroll">Home</a></li>
+          <li><a href="index.html#about" class="smoothScroll">About</a></li>
+          <li><a href="index.html#portfolio" class="smoothScroll">Portfolio</a></li>
+          <li><a href="index.html#blog" class="smoothScroll">Blog</a></li>
           <li><a href="#contact" class="smoothScroll">Contact</a></li>
         </ul>
       </div>
@@ -79,7 +79,7 @@
                       <ul class="list-unstyled mb-0">
                         <li class="author">by:<a href="#">Nina Vuong</a></li>
                         <li class="date">date:<a href="#">March 31, 2020</a></li>
-                        <li class="commont"><i class="ion-ios-heart-outline"></i><a href="#">3 Comments</a></li>
+                        <!-- <li class="commont"><i class="ion-ios-heart-outline"></i><a href="#">3 Comments</a></li> -->
                       </ul>
                     </div>
                     <p class="mb-30">The most significant challenge that comes to mind was when I decided to stay alone in the United States to pursue my education, while my entire family moved back to Vietnam.
@@ -144,7 +144,7 @@
                   </div>
                 </div>
               </div> -->
-              <div class="col-lg-12">
+              <!-- <div class="col-lg-12">
                 <div class="cmt padDiv">
                   <form id="comment-form" method="post" action="" role="form">
                     <div class="row">
@@ -174,7 +174,7 @@
                     </div>
                   </form>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -183,6 +183,29 @@
   </div>
   <!--  </div> -->
   <!-- start section main content -->
+  <!-- contact section -->
+  <div id="contact" class="paddsection">
+    <div class="container">
+      <div class="contact-block1">
+        <div class="row">
+
+          <div class="col-lg-6 pb-5">
+            <div class="contact-contact">
+
+              <h2 class="mb-30">GET IN TOUCH</h2>
+
+              <ul class="contact-details">
+                <li><span><i class="fas fa-map-marked-alt"></i> 2514 S Center Street, Santa Ana, CA 92704</span></li>
+                <li><span><i class="fas fa-phone"></i> (714) 902-5986</span></li>
+                <li><a class="email" href = "mailto: ninavuong27@gmail.com"><i class="fas fa-envelope"></i> ninavuong27@gmail.com</a></li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- start section footer -->
   <div id="footer" class="text-center">
@@ -193,6 +216,7 @@
           <li><a href="https://www.facebook.com/vuongtrucnha"><i class="ion-social-facebook"></i></a></li>  
           <li><a href="https://www.instagram.com/nhavuong/"><i class="ion-social-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/in/nina-vuong-a76435186/"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://github.com/nhavuong"><i class="ion-social-github"></i></a></li>
         </ul>
         <h4>NINA VUONG &copy; 2020</h4>
 
@@ -213,6 +237,7 @@
 
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
+  <script src="https://kit.fontawesome.com/3a7f96f49f.js" crossorigin="anonymous"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
