--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <div class="col-lg-7">
           <div class="about-descr">
             <p class="p-heading">Hello and Welcome! I'm Nina Vuong </p>
-            <p class="separator">Currently a full-time student working towards Software Engineering degree. Ambitious student with excellent research, time management and problem-solving skills. Hard working and organized in any type of task that is given. Works well under pressure and consistently meets deadlines and targets while delivering high quality work. Experienced
+            <p class="separator">Currently I'm doing my internship as a SDET at Optimizely. I've just graduated this year June 2020 working towards Software Engineering degree.
+              Ambitious student with excellent research, time management and problem-solving skills. Hard working and organized in any type of task that is given. Works well under pressure and consistently meets deadlines and targets while delivering high quality work. Experienced
               Specialist committed to maintaining cutting edge technial skills and up-to-date industry knowledge at Apple.</p>
           </div>
         </div>
@@ -103,8 +104,6 @@
     </div>
   </div>
   <!-- end section about us -->
-
-
 
   <!-- start section services -->
   <div id="services">
@@ -195,9 +194,14 @@
             <h4 class="text-center">Where I've worked</h4>
             <br />
             <br />
-            <h5>Incoming Summer Intern 2020 </h5>
-            <p>Optimizely - San Francisco, Software Development Engineer in Test</p>
-            <h5>Jan 2020 - Present</h5>
+            <h5>June 2020 - Present</h5>
+            <p>Optimizely - San Francisco, Software Development Engineer in Test - Intern</p>
+              <ul>
+                <li>Build software automation tools to help detect bugs</li>
+                <li>Read and write design docs</li>
+                <li>Building and contributing to Optimizely’s frontend and backend automation frameworks</li>
+              </ul>
+            <h5>Jan 2020 - June 2020</h5>
             <p>Pacific Marine Mammal Center - Laguna Beach, Front-end Developer
               <ul>
                 <li>Build web pages by developing and implementing front-end web code to design/code standards in clean, semantic code</li>
@@ -207,7 +211,7 @@
               </ul>
             </p>
 
-            <h5>June 2019 - Present</h5>
+            <h5>June 2019 - June 2020</h5>
             <p>Apple Store - Irvine Spectrum, Specialist
               <ul>
                 <li>Listened and responded to customer requests and forwarded necessary information to management to ensure appropriate problem-solving.</li>
@@ -222,7 +226,6 @@
                 <li>Greeted incoming visitors and customers professionally and provided friendly, knowledgeable assistance</li>
               </ul>
             </p>
-
 
           </div>
         </div> 
@@ -354,7 +357,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="journal-info">
 
-              <a href="blog-single.html"><img src="images/blog-post-3.JPG" class="img-responsive" alt="img"></a>
+              <a href="blog-single.html"><img src="images/uci.JPG" class="img-responsive" alt="img"></a>
 
               <div class="journal-txt">
 
@@ -381,14 +384,13 @@
       <div class="contact-block1">
         <div class="row">
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 pb-5">
             <div class="contact-contact">
 
               <h2 class="mb-30">GET IN TOUCH</h2>
 
               <ul class="contact-details">
                 <li><span><i class="fas fa-map-marked-alt"></i> 2514 S Center Street, Santa Ana, CA 92704</span></li>
-                <!-- <li><span>Santa Ana, CA 92704, United States</span></li> -->
                 <li><span><i class="fas fa-phone"></i> (714) 902-5986</span></li>
                 <li><a class="email" href = "mailto: ninavuong27@gmail.com"><i class="fas fa-envelope"></i> ninavuong27@gmail.com</a></li>
               </ul>
@@ -396,7 +398,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <form action="#" method="post" role="form" class="contactForm">
               <div class="row">
 
@@ -438,7 +440,7 @@
               </div>
             </form>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
