--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Nina Vuong</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
+<script src="https://cdn.optimizely.com/js/18205820767.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
