update school and experience

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <ul class="list-unstyled list-social">
           <li><a href="https://www.facebook.com/vuongtrucnha"><i class="ion-social-facebook"></i></a></li>  
           <li><a href="https://www.instagram.com/nhavuong/"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/nina-vuong-a76435186/"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/ninavuong/"><i class="ion-social-linkedin"></i></a></li>
           <li><a href="https://github.com/nhavuong"><i class="ion-social-github"></i></a></li>
         </ul>
       </div>
@@ -96,9 +96,9 @@
         <div class="col-lg-7">
           <div class="about-descr">
             <p class="p-heading">Hello and Welcome! I'm Nina Vuong </p>
-            <p class="separator">Currently I'm doing my internship as a SDET at Optimizely. I've just graduated this year June 2020 working towards Software Engineering degree.
+            <p class="separator">Currently I'm doing my internship as a Software Development Engineer at Optimizely. I've just graduated this year June 2020 working towards Software Engineering degree and continue to get the Master's degree.
               Ambitious student with excellent research, time management and problem-solving skills. Hard working and organized in any type of task that is given. Works well under pressure and consistently meets deadlines and targets while delivering high quality work. Experienced
-              Specialist committed to maintaining cutting edge technial skills and up-to-date industry knowledge at Apple.</p>
+              Specialist committed to maintaining cutting edge technical skills and up-to-date industry knowledge at Apple.</p>
           </div>
         </div>
       </div>
@@ -123,16 +123,16 @@
           <div class="services-block">
 
             <i class="ion-ios-lightbulb-outline"></i>
-            <span>PROGRAMMING SKILLS</span>
-            <p class="separator">JAVA . PYTHON . C++ . SQL </p>
+            <span>PROGRAMMING LANGUAGES</span>
+            <p class="separator">JAVA . PYTHON . C++ . HTML . CSS . JavaScript . SQL </p>
 
           </div>
 
           <div class="services-block">
 
             <i class="ion-ios-color-wand-outline"></i>
-            <span>WEB DESIGN</span>
-            <p class="separator">HTML . CSS . JavaScript </p>
+            <span>TOOLS</span>
+            <p class="separator">Cypress.io, Postman, Cucumber.js, Junit testing, Eclipse, NetBeans, VS Code </p>
 
           </div>
 
@@ -177,6 +177,10 @@
             <h4 class="text-center">What I've learned</h4>
             <br /> 
             <br />
+            <h5>2020 - 2021</h5>
+            <p>University of California, Irvine - Irvine, CA, Class of 2021
+              <br />Master's Degree: Software Engineering</p>
+
             <h5>2018 - 2020</h5>
             <p>University of California, Irvine - Irvine, CA, Class of 2020
               <br />Bachelor of Science: Software Engineering</p>
@@ -196,16 +200,18 @@
             <br />
             <br />
             <h5>June 2020 - Present</h5>
-            <p>Optimizely - San Francisco, Software Development Engineer in Test - Intern</p>
+            <p>Optimizely - San Francisco, Software Development Engineer - Intern</p>
               <ul>
-                <li>Build software automation tools to help detect bugs</li>
-                <li>Read and write design docs</li>
-                <li>Building and contributing to Optimizely’s frontend and backend automation frameworks</li>
+                <li>Wrote JavaScript (React) automation code in the Cypress.io framework that is part of a test suite for Optimizely’s Web and Full Stack product to help prevent bugs in the front-end.</li>
+                <li>Developed REST API testing using Python to establish that integrations between services are functioning reliably, and to verify that new features have not broken any existing functionality. Used Pytest framework to create custom payloads to validate request-responses from REST API endpoints.</li>
+                <li>Contributing to an integration SDK testing framework using BDD (Gherkin syntax) to ensure the I/O of the SDKs are correct and have consistent behavior.</li>
+                <li>Attended multiple Bug Bashes and helped ensure quality for new features.</li>
+                <li>Contributed to the Exploratory Testing Team which ran validations on outgoing builds.</li>
               </ul>
             <h5>Jan 2020 - June 2020</h5>
             <p>Pacific Marine Mammal Center - Laguna Beach, Front-end Developer
               <ul>
-                <li>Build web pages by developing and implementing front-end web code to design/code standards in clean, semantic code</li>
+                <li>Build web pages by developing and implementing front-end web code to design standards in clean, semantic code</li>
                 <li>Create exceptionally designed web content to enhance and improve user experience</li>
                 <li>Increase the ease of use of our applications assist back-end developers with coding and troubleshooting</li>
                 <li>Build high-quality mock-ups and design different prototypes</li>         
@@ -216,7 +222,8 @@
             <p>Apple Store - Irvine Spectrum, Specialist
               <ul>
                 <li>Listened and responded to customer requests and forwarded necessary information to management to ensure appropriate problem-solving.</li>
-                <li>Evaluated diverse organizational systems to identify workflow, communication and resource utilization issues. Maintained knowledge of current sales and goals for each devices, quality compliance and customer experiences.</li>
+                <li>Evaluated diverse organizational systems to identify workflow, communication and resource utilization issues. </li>
+                <li>Maintained knowledge of current sales and goals for each devices, quality compliance and customer experiences.</li>
               </ul>
             </p>
 
@@ -456,7 +463,7 @@
         <ul class="list-unstyled">
           <li><a href="https://www.facebook.com/vuongtrucnha"><i class="ion-social-facebook"></i></a></li>  
           <li><a href="https://www.instagram.com/nhavuong/"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/nina-vuong-a76435186/"><i class="ion-social-linkedin"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/ninavuong/"><i class="ion-social-linkedin"></i></a></li>
           <li><a href="https://github.com/nhavuong"><i class="ion-social-github"></i></a></li>
           <!-- <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
           <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
