--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
           <br />
           <h5>2020 - 2021</h5>
           <p style="font-size: 18px;"><strong>University of California, Irvine - Irvine, CA, Class of 2021</strong></p>
-          <p>Master's Degree: Software Engineering</p>
+          <p><strong>Master's Degree:</strong> Software Engineering</p>
 
           <h5>2018 - 2020</h5>
           <p style="font-size: 18px;"><strong>University of California, Irvine - Irvine, CA, Class of 2020</strong></p>
-          <p>Bachelor of Science: Software Engineering
+          <p><strong>Bachelor of Science:</strong> Software Engineering
             <br /><strong>Coursework:</strong> Data Management, Operating Systems, Computer Networks, Software
             Testing-Analysis-Quality Assurance, Software Design: Applications, Structure and Implementation, Internet
             Applications Engineering, Project Management, Information Retrieval.</p>
