--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="header-content">
                 <h1>I'm <span class="typed"></span></h1>
-                <p>Developer, QA Enginner, Specialist</p>
+                <p>Developer, QA Enginneer, Specialist</p>
 
                 <ul class="list-unstyled list-social">
                     <li><a href="https://www.facebook.com/vuongtrucnha"><i class="ion-social-facebook"></i></a></li>
