--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@
                     <h4 class="text-center">Where I've worked</h4>
                     <br />
                     <br />
-                    <h5>Jan 2022 - Present</h5>
+                    <h5>May 2023 - Present</h5>
+                    <p style="font-size: 18px;"><strong>Apple Inc., Software Integrity Engineer</strong></p>
+                   
+                    <h5>Jan 2022 - Apr 2023</h5>
                     <p style="font-size: 18px;"><strong>Ultra Mobile - Costa Mesa, Quality Assurance Engineer</strong></p>
                     <ul>
                         <li>Working cross-functionally with developers, product manager, and project manager for test planning, test case development, and execution of the test plan and test cases for each Sprint.</li>
