--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="col-lg-7">
                     <div class="about-descr">
                         <p class="p-heading">Hello and Welcome! I'm Nina Vuong </p>
-                        <p class="separator">Currently, I'm working at Ultra Mobile as a QA Engineer. I graduated in June 2020 studying towards a Software Engineering degree and got a Master's degree which graduated in Dec 2021. Hardworking, attention to detail, and organized
+                        <p class="separator">Currently, I'm working at Apple as a Software Integrity Engineer. I graduated in June 2020 studying towards a Software Engineering degree and got a Master's degree which graduated in Dec 2021. Hardworking, attention to detail, and organized
                             in any type of task that is given. Works well under pressure and consistently meets deadlines and targets while delivering high-quality work. Experienced Specialist committed to maintaining cutting edge technical skills and
                             up-to-date industry knowledge at Apple.
                         </p>
